# FOUNDATION-AI-SOTA-MODEL

./: README.md  pyproject.toml
configs/: README.md  sota_4_7.yaml
data/: README.md
data/samples/: chat.jsonl  code.jsonl  contamination.jsonl  multilingual.jsonl  pretrain.jsonl  tool_use.jsonl
docs/: PERMUTATIONS.md  PRECISION.md
scripts/pipelines/: 01_clean_data.py  02_tokenize_and_pack.py  03_pretrain.py  README.md
src/sota_model/: __init__.py  config.py
src/sota_model/checkpoint/: README.md  __init__.py  manager.py  merge.py
src/sota_model/evaluation/: README.md  __init__.py  behavioral_audit.py  release_gate.py
src/sota_model/inference/: README.md  __init__.py  chat_template.py  engine.py  sampler.py  thinking.py  tools.py
src/sota_model/inference/sandbox/: README.md  __init__.py  code_exec.py  web.py
src/sota_model/modeling/: README.md  __init__.py  attention.py  kv_cache.py  layers.py  rope.py  transformer.py
src/sota_model/modeling/vision/: README.md  __init__.py  encoder.py  projector.py
src/sota_model/post_training/: README.md  __init__.py  constitutional.py  reward_model.py  rlhf.py  sft.py
src/sota_model/safety/: README.md  __init__.py  classifiers.py
src/sota_model/safety/probes/: README.md  __init__.py  constitutional.py  feature_extractor.py  linear_probe.py  registry.py
src/sota_model/serving/: README.md  __init__.py  server.py
src/sota_model/tokenizer/: README.md  __init__.py  bpe.py
src/sota_model/training/: README.md  __init__.py  corpus.py  data.py  parallelism.py  pretrain.py  sample_loader.py  schedule.py
(+6 files in other folders)
